# RayTracer

./: .gitignore  CMakeLists.txt  README.md
RayTracer/: Camera.h  Normals.h  Primitive.h  Ray.h  RayGenerator.h  Shading.h  ToneMapping.h  Tree.h  main.cpp
RayTracer/testobjs/: blue_sphere.mtl  cornell_box.mtl  spheres.mtl
